<resources>


        <!--        商品-->
        <string name="item_title_goods">商品</string>
         <string name="item_title_posts">素材</string>
        <string name="item_voucher">优惠卷</string>
        <string name="item_more_vounchers">可领取的优惠券</string>
        <string name="item_use">去使用</string>
        <string name="item_claim">立即领取</string>
        <string name="item_no_vounchers">暂无可领取的优惠券</string>
        <string name="item_add_order">去凑单</string>
        <string name="item_promotion">促销活动</string>
        <string name="item_share">复制或分享链接到好友</string>
        <string name="item_copy">复制</string>
        <string name="item_shares">分享</string>
        <string name="item_add_cart">加入购物车</string>
        <string name="item_quantity">数量</string>


        <string name="item_delivery_time">预计物流时效：6-15 days</string>
        <string name="item_promotion_detail">促销：</string>
        <string name="item_vochers">领劵：</string>
        <string name="item_detail_title">Products Description</string>
        <string name="item_formulation">Formulation: Lipstick</string>
        <string name="item_home">首页</string>
        <string name="item_cart">购物车</string>
        <string name="item_sale">销售</string>
        <string name="item_number">数量(商品)</string>


</resources>
