<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="viewModel"
            type="cc.onion.cosyfans.item.viewModel.DetailAndroidViewModel" />
    </data>
    <FrameLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/body"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:scrollbars="vertical"
            android:layout_marginBottom="50dp"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">


                <FrameLayout
                    android:id="@+id/layout_framelayout"
                    android:layout_width="match_parent"
                    android:layout_height="325dp"
                    app:layout_collapseMode="pin">

                    <!--轮播图-->
                    <com.youth.banner.Banner
                        android:id="@+id/home_banner"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/base_banner_products_height" />



                    <!--如果房源没有任何图片，就显示这个-->
                    <ImageView
                        android:id="@+id/used_house_iv_cover"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/icon_placeholder_youju"
                        android:visibility="gone" />

                    <!--房源状态-->

                    <!--房源图片数量和下标-->
                    <TextView
                        android:id="@+id/item_tv_pictures_num"
                        android:layout_width="wrap_content"
                        android:visibility="visible"
                        android:layout_centerVertical="true"

                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="bottom|end"
                        android:layout_marginEnd="@dimen/base_margin"
                        android:layout_marginBottom="@dimen/base_margin"
                        android:background="@drawable/item_cover_tag_shape"
                        android:paddingStart="8dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="8dp"
                        android:paddingBottom="5dp"
                        android:text="1/5"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </FrameLayout>

                <RelativeLayout
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:background="#F85717"

                    android:layout_height="50dp">


                    <TextView
                        android:id="@+id/tv_left"
                        style="@style/ItemDetailTextStyle"
                        android:background="@color/orange"
                        android:textColor="@color/white"
                        android:layout_alignParentLeft="true"
                        android:paddingRight="0dp"
                        android:text="RM"
                        android:layout_alignParentBottom="true"
                        android:textSize="@dimen/base_font_size_12" />


                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_toRightOf="@+id/tv_left"
                        style="@style/ItemDetailTextStyle"
                        android:background="@color/orange"
                        android:textColor="@color/white"
                        android:layout_centerVertical="true"
                        android:paddingRight="0dp"
                        android:paddingTop="0dp"
                        android:text="@={viewModel.itemPrice1}"
                        android:paddingBottom="0dp"
                        android:paddingLeft="5dp"
                        android:textSize="@dimen/base_font_size_30" />



                    <TextView
                        android:layout_toRightOf="@+id/tv_price"
                        style="@style/ItemDetailTextStyle"
                        android:background="@color/orange"
                        android:textColor="@color/white"
                        android:paddingRight="0dp"
                        android:paddingTop="0dp"
                        android:layout_alignParentBottom="true"
                        android:paddingLeft="5dp"
                        android:text="Discounted Price "
                        android:textSize="@dimen/base_font_size_12" />


                </RelativeLayout>



                <LinearLayout
                    android:layout_below="@+id/layout_framelayout"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:background="@color/base_bg"
                    android:layout_height="wrap_content">





                    <RelativeLayout
                        android:layout_toRightOf="@+id/img_products"
                        android:layout_width="match_parent"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/base_padding"
                        android:paddingTop="10dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_products_monery"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@={viewModel.itemPrice2}"
                            android:textColor="@color/bluce"
                            android:paddingBottom="5dp"
                            android:textStyle="bold"
                            android:layout_above="@+id/tv_products_id"
                            android:textSize="@dimen/base_font_size_18" />


                        <TextView
                            android:layout_toRightOf="@+id/tv_products_monery"
                            android:id="@+id/tv_products_monery_real"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingTop="5dp"
                            android:textStyle="bold"
                            android:paddingBottom="10dp"
                            android:text="@={viewModel.itemPrice3}"
                            android:textColor="@color/text_sub_dark"
                            android:layout_above="@+id/tv_products_id"
                            android:layout_centerHorizontal="true"
                            android:textSize="@dimen/base_font_size_12" />




                    </RelativeLayout>

                    <TextView
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:id="@+id/tv_products_title"
                        android:layout_width="match_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:text="@={viewModel.produtctTitle}"
                        android:textColor="@color/text"
                        android:layout_centerHorizontal="true"
                        android:textStyle="bold"
                        android:textSize="@dimen/base_font_size_13" />

                    <TextView
                        style="@style/ItemDetailTextLeftStyle"
                        android:layout_marginTop="5dp"
                        android:id="@+id/tv_item_delivery_time"
                        android:layout_width="match_parent"
                        android:text="@={viewModel.deliverytime}"
                        />




                    <RelativeLayout
                        android:id="@+id/layout_promotion"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:background="@color/white"
                        android:layout_height="40dp">


                        <TextView
                            style="@style/ItemDetailTextLeftStyle"
                            android:id="@+id/tv_item_promotion"
                            android:layout_alignParentLeft="true"
                            android:text="@string/item_promotion_detail"
                            android:textStyle="bold"
                            android:textSize="@dimen/base_font_size_13" />



                        <TextView
                            android:id="@+id/tv_item_promotio_right"
                            style="@style/ItemDetailTextRightStyle"
                            android:layout_toRightOf="@+id/tv_item_promotion"
                            android:layout_width="match_parent"
                            android:onClick="@{v->viewModel.onPromotionClick()}"
                            android:text="@={viewModel.promotion}"
                            android:drawableRight="@mipmap/icon_right_arrow"
                            android:paddingRight="10dp"
                            />


                    </RelativeLayout>




                    <RelativeLayout
                        android:visibility="visible"
                        android:id="@+id/layout_vochers"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:background="@color/white"
                        android:layout_height="40dp">


                        <TextView
                            style="@style/ItemDetailTextLeftStyle"
                            android:id="@+id/tv_item_vochers"
                            android:layout_alignParentLeft="true"
                            android:text="@string/item_vochers"
                            android:textStyle="bold"
                            android:textSize="@dimen/base_font_size_13"
                            />



                        <TextView
                            android:layout_toRightOf="@+id/tv_item_vochers"
                            android:id="@+id/tv_item_vochers_right"
                            style="@style/ItemDetailTextRightStyle"
                            android:layout_width="match_parent"
                            android:text="@={viewModel.vouchers}"
                            android:onClick="@{v->viewModel.onVouchersClick()}"
                            android:drawableRight="@mipmap/icon_right_arrow"
                            android:paddingRight="10dp"
                            />


                    </RelativeLayout>



                    <RelativeLayout
                        android:visibility="gone"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:background="@color/white"
                        android:layout_height="40dp">




                        <TextView
                            style="@style/ItemDetailTextLeftStyle"
                            android:id="@+id/tv_item_about"
                            android:layout_alignParentLeft="true"
                            android:text="@string/item_promotion_detail"
                            android:textSize="@dimen/base_font_size_13" />




                    </RelativeLayout>





                    <LinearLayout
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:background="@color/white"
                        android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:text="商品描述"
                        android:textSize="@dimen/base_font_size_13"
                        android:textStyle="bold"
                        android:textColor="@color/text"
                        android:padding="10dp"
                        android:layout_height="wrap_content"/>

                        <View
                            style="@style/BaseAppLineStyle"
                            android:layout_marginLeft="@dimen/base_margin"
                            android:layout_marginRight="@dimen/base_margin"
                            />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rl_item_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white" />

                    </LinearLayout>
                    <WebView
                        android:layout_marginTop="5dp"
                        android:id="@+id/web_context"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        tools:ignore="WebViewLayout" />

                </LinearLayout>


            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>




        <include
            android:layout_width="match_parent"
            android:layout_height="50dp"
            layout="@layout/item_products_detail_butttom"
            android:layout_alignParentBottom="true"
            app:buttomViewModel="@{viewModel}" />



        <RelativeLayout
            android:visibility="gone"
            android:background="@color/white"
            android:gravity="top"
            android:layout_width="match_parent"
            android:layout_height="50dp">


            <ImageView
                android:id="@+id/img_left"
                android:src="@mipmap/icon_left"
                android:layout_centerVertical="true"
                android:layout_width="30dp"
                android:layout_alignParentLeft="true"
                android:scaleType="center"
                android:layout_height="30dp"/>


            <TextView
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/base_font_size_14"
                android:textColor="@color/text"
                android:text="@string/item_title_goods"
                android:layout_height="match_parent"/>


        </RelativeLayout>
    </RelativeLayout>

        <RelativeLayout
            android:layout_marginBottom="80dp"
            android:gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:id="@+id/img_top"
                android:scaleType="fitCenter"
                android:layout_width="60dp"
                android:background="@null"
                android:visibility="gone"
                android:src="@mipmap/home_top"
                android:layout_height="60dp"/>

        </RelativeLayout>




    </FrameLayout>
</layout>
